--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,8 +47,14 @@ dev = [
     "flake8>=6.0.0",
     "isort>=5.12.0",
 ]
+api = [
+    "fastapi>=0.111.0,<1.0.0",
+    "uvicorn[standard]>=0.30.0,<1.0.0",
+    "python-multipart>=0.0.9",
+    "mangum>=0.17.0,<1.0.0",
+]
 all = [
-    "perplexity-api[driver,dev]",
+    "perplexity-api[driver,dev,api]",
 ]
 
 [project.urls]
